test deter obs reactivity

--- a/docs/styles/dashboard.css
+++ b/docs/styles/dashboard.css
@@ -9,7 +9,7 @@ html {
 
 /* disable built-in loading spinner */
 .observablehq--loading::before {
-  display: none;
+  display: none !important;
 }
 
 #observablehq-main,
