--- a/docs/styles/dashboard.css
+++ b/docs/styles/dashboard.css
@@ -2,7 +2,7 @@ body,
 html {
   height: 100%;
   margin: 0 !important;
-  /* overflow: hidden; */
+  overflow: hidden;
   padding: 0;
   font-family: var(--bulma-body-family);
 }
@@ -143,6 +143,12 @@ html {
   /* border: 1px solid #ddd; */
   padding: 4px;
   box-sizing: border-box;
+}
+
+#sorter-table-container {
+  width: 100%;
+  padding: 4px;
+  overflow: hidden !important;
 }
 
 /* Panel styling */
